--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-style: normal;
           }
         </style>
-        <link rel="stylesheet" type="text/css" href="liquid.css"/>
+        <link rel="stylesheet" type="text/css" href="css/liquid.css"/>
     </head>
 
     <body>
