Fixed the paths for all the js files.

--- a/index.html
+++ b/index.html
@@ -82,16 +82,15 @@
 
         <div id="placeholder"></div>
 
-        
-        <script src="wrappedgl.js"></script>
-        <script src="utilities.js"></script>
-        <script src="camera.js"></script>
-        <script src="boxeditor.js"></script>
-        <script src="simulator.js"></script>
-        <script src="renderer.js"></script>
-        <script src="simulatorrenderer.js"></script>
-        <script src="slider.js"></script>
-        <script src="fluidparticles.js"></script>
+        <script src="js/boxeditor.js"></script>
+        <script src="js/camera.js"></script>
+        <script src="js/particles.js"></script>
+        <script src="js/renderer.js"></script>
+        <script src="js/simulator.js"></script>
+        <script src="js/simulatorrenderer.js"></script>
+        <script src="js/slider.js"></script>
+        <script src="js/utilities.js"></script>
+        <script src="js/wrappedgl.js"></script>
 
         <script>
             function concatenateWords (list) {
