--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 
         <div id="placeholder"></div>
 
-        <script src="js/boxeditor.js"></script>
-        <script src="js/camera.js"></script>
-        <script src="js/particles.js"></script>
-        <script src="js/renderer.js"></script>
-        <script src="js/simulator.js"></script>
-        <script src="js/simulatorrenderer.js"></script>
-        <script src="js/slider.js"></script>
-        <script src="js/utilities.js"></script>
+        <script src="js/liquid.boxeditor.js"></script>
+        <script src="js/liquid.camera.js"></script>
+        <script src="js/liquid.particles.js"></script>
+        <script src="js/liquid.renderer.js"></script>
+        <script src="js/liquid.simulator.js"></script>
+        <script src="js/liquid.simulatorrenderer.js"></script>
+        <script src="js/liquid.slider.js"></script>
+        <script src="js/liquid.utilities.js"></script>
         <script src="js/wrappedgl.js"></script>
 
         <script>
