--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <script src="js/liquid.driver.js"></script>
         <script src="js/liquid.renderer.js"></script>
         <script src="js/liquid.simulator.js"></script>
-        <script src="js/liquid.simulatorrenderer.js"></script>
+        <script src="js/liquid.engine.js"></script>
         <script src="js/liquid.slider.js"></script>
         <script src="js/liquid.utilities.js"></script>
         <script src="js/wrappedgl.js"></script>
