Gave a better website title.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Real-time Particle-based 3D Liquid Simulation and Rendering">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Liquid</title>
+        <title>Fluid Simulation (FLIP/PIC)</title>
 
         <link rel="icon" type="image/png" href="images/favicon.png" />
         <!-- Import Cormorant Garamond from Google Fonts -->
@@ -16,7 +16,7 @@
             font-style: normal;
           }
         </style>
-        <link rel="stylesheet" type="text/css" href="css/liquid.css"/>
+        <link rel="stylesheet" type="text/css" href="css/fluid.css"/>
     </head>
 
     <body>
