Fixed js file paths.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
         <div id="placeholder"></div>
 
-        <script src="js/liquid.boxeditor.js"></script>
-        <script src="js/liquid.camera.js"></script>
-        <script src="js/liquid.driver.js"></script>
-        <script src="js/liquid.renderer.js"></script>
-        <script src="js/liquid.simulator.js"></script>
-        <script src="js/liquid.engine.js"></script>
-        <script src="js/liquid.slider.js"></script>
-        <script src="js/liquid.utilities.js"></script>
+        <script src="js/boxeditor.js"></script>
+        <script src="js/camera.js"></script>
+        <script src="js/driver.js"></script>
+        <script src="js/renderer.js"></script>
+        <script src="js/simulator.js"></script>
+        <script src="js/engine.js"></script>
+        <script src="js/slider.js"></script>
+        <script src="js/utilities.js"></script>
         <script src="js/wrappedgl.js"></script>
 
         <script>
